[gd_scene load_steps=20 format=2]

[ext_resource path="res://game/script/game/player/Player.gd" type="Script" id=1]
[ext_resource path="res://game/asset/graphic/characters/Troy_Sheet.png" type="Texture" id=2]
[ext_resource path="res://game/script/util/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://game/script/game/player/state/Walk.gd" type="Script" id=4]
[ext_resource path="res://game/script/game/player/state/Menu.gd" type="Script" id=5]
[ext_resource path="res://game/scene/ui/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/asset/graphic/Sprite-0001.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 9.41099

[sub_resource type="CircleShape2D" id=2]
radius = 3.11887

[sub_resource type="Animation" id=3]
resource_name = "default-bottom-8"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "default-bottom-left-8"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=5]
resource_name = "default-bottom-right-8"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 43, 44, 45, 46, 47, 48 ]
}

[sub_resource type="Animation" id=6]
resource_name = "default-left-8"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "default-right-8"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=8]
resource_name = "default-top-8"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=9]
resource_name = "default-top-left-8"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41 ]
}

[sub_resource type="Animation" id=10]
resource_name = "default-top-right-8"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54, 55 ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 250.0

[sub_resource type="Animation" id=12]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Hero" type="KinematicBody2D"]
position = Vector2( 512, 304 )
z_index = 2
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 14.5775, 0 )
shape = SubResource( 2 )

[node name="Nuzzle" type="Position2D" parent="Area2D"]
position = Vector2( 30, 0 )

[node name="walk" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 8
hframes = 7
frame = 1

[node name="walk" type="AnimationPlayer" parent="walk"]
anims/default-bottom-8 = SubResource( 3 )
anims/default-bottom-left-8 = SubResource( 4 )
anims/default-bottom-right-8 = SubResource( 5 )
anims/default-left-8 = SubResource( 6 )
anims/default-right-8 = SubResource( 7 )
anims/default-top-8 = SubResource( 8 )
anims/default-top-left-8 = SubResource( 9 )
anims/default-top-right-8 = SubResource( 10 )

[node name="slash" type="Sprite" parent="."]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="slash"]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D3" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 0, 10 )
shape = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="Area2D3"]
visible = false
self_modulate = Color( 0.933333, 0.0156863, 0.0156863, 0.466667 )
texture = ExtResource( 8 )
region_rect = Rect2( 107, 161, 138, 39 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D3/Sprite"]
playback_speed = 0.5
anims/rotation = SubResource( 12 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -40 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
animation = NodePath("../../walk/walk")

[node name="Menu" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="HUD" parent="." instance=ExtResource( 6 )]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="body_exited" from="Area2D3" to="." method="_on_Area2D3_body_exited"]
